# Assignment1

./: .gitignore  README.md  error.txt  generate_keys.py  pyproject.toml
.streamlit/: secrets.toml
streamlit/: app.py  demo.py  env.txt  hashed.pw.pkl  mainapp.py  test_case_selection.py  try.py  visualization.py
streamlit/page/: model_evaluation.py  visualization.py
streamlit/pages/: test_case_selection.py
streamlit/services/: db_connection.py  openai_client.py
